create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -632,7 +632,7 @@ section.lazy-placeholder:after {
 .cid-sdiAVNn7da {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/dsc01323.jpg");
+  background-image: url("../../../assets/images/dsc01323.jpeg");
 }
 .cid-sdiAVNn7da H1 {
   color: #f9f9f9;
