--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16513,6 +16513,185 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-sdZ844kdv1 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sdZ844kdv1 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sdZ844kdv1 .container-fluid {
+  padding: 0!important;
+}
+.cid-sdZ844kdv1 .col-md-12 {
+  padding: 0;
+}
+.cid-sdZ844kdv1 .row {
+  margin: 0;
+}
+.cid-sdZ844kdv1 .btn {
+  margin: 0.3rem;
+  margin-top: 2rem;
+}
+.cid-sdZ844kdv1 .m-auto {
+  max-width: 650px;
+  padding: 2rem;
+}
+.cid-sdZ844kdv1 .line {
+  width: 35px;
+  height: 3px;
+  display: inline-block;
+  background: #232323;
+  transition: background 0.3s;
+  margin-bottom: 3rem;
+}
+.cid-sdZ844kdv1 .number-wrap {
+  color: #767676;
+  border-color: rgba(255, 255, 255, 0.15);
+  border: 3px solid #efefef;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-sdZ844kdv1 .number {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 50px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #767676;
+}
+.cid-sdZ844kdv1 .period {
+  display: block;
+}
+.cid-sdZ844kdv1 .dot {
+  display: none;
+}
+.cid-sdZ844kdv1 .countdown-cont {
+  max-width: 700px;
+}
+.cid-sdZ844kdv1 .col-xs-3 {
+  padding-left: 0;
+  padding-right: 0;
+  margin-right: 20px;
+  max-width: 20%;
+  flex: 0 0 20%;
+}
+@media (max-width: 767px) {
+  .cid-sdZ844kdv1 .number-wrap {
+    margin-bottom: 15px;
+  }
+  .cid-sdZ844kdv1 .col-xs-3 {
+    margin-right: 0px;
+    max-width: 50%!important;
+    flex: 0 0 50%!important;
+  }
+  .cid-sdZ844kdv1 .box {
+    height: 400px!important;
+  }
+}
+@media (max-width: 440px) {
+  .cid-sdZ844kdv1 .number,
+  .cid-sdZ844kdv1 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-sdZ844kdv1 .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-sdZ844kdv1 .box {
+  background-image: url("../../../assets/images/arteampulhetaoficial.png");
+  background-size: cover;
+  background-position: center;
+  height: 700px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sdZ844kdv1 .icon-wrap {
+  background-color: #f9f9f9 !important;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+}
+.cid-sdZ844kdv1 .icon-wrap:hover {
+  opacity: 0.8;
+}
+.cid-sdZ844kdv1 .icon-wrap span {
+  padding-left: 8px;
+}
+.cid-sdZ844kdv1 .mbr-media span {
+  font-size: 30px;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+  color: #ffffff !important;
+}
+.cid-sdZ844kdv1 .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-35%);
+  -moz-transform: translateX(-35%);
+  -ms-transform: translateX(-35%);
+  -o-transform: translateX(-35%);
+  transform: translateX(-35%);
+}
+.cid-sdZ844kdv1 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-sdZ844kdv1 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-sdZ844kdv1 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-sdZ844kdv1 a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-sdZ844kdv1 a.close:hover {
+  color: #ffffff;
+}
+.cid-sdZ844kdv1 .mbr-text {
+  color: #767676;
+}
+.cid-sdZ844kdv1 H4 {
+  color: #767676;
+}
 .cid-scaSbYkVAX {
   padding-top: 60px;
   padding-bottom: 60px;
