create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16610,7 +16610,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-sdZ844kdv1 .box {
-  background-image: url("../../../assets/images/capa-ampulheta.png");
+  background-image: url("../../../assets/images/ampulhetabaixaq.jpg");
   background-size: cover;
   background-position: center;
   height: 700px;
