--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14719,100 +14719,6 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-sdZgZYEM6z .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 5px 13px 5px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-sdZgZYEM6z .number {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  text-transform: none;
-  letter-spacing: -2px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-sdZgZYEM6z .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-sdZgZYEM6z .dot {
-  position: absolute;
-  top: -10px;
-  right: -0.8em;
-  width: 1em;
-  display: block;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 55px;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-sdZgZYEM6z .countdown-cont {
-  margin: 0 auto;
-}
-.cid-sdZgZYEM6z .full-count-container {
-  background: #000000;
-}
-@media (min-width: 992px) and (max-width: 1200px) {
-  .cid-sdZgZYEM6z .dot {
-    right: -0.6em;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sdZgZYEM6z .dot {
-    right: -1em;
-  }
-}
-@media (max-width: 768px) {
-  .cid-sdZgZYEM6z .dot {
-    display: none;
-  }
-  .cid-sdZgZYEM6z .number {
-    white-space: nowrap;
-  }
-}
-@media (max-width: 550px) {
-  .cid-sdZgZYEM6z .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-sdZgZYEM6z .number {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-sdZgZYEM6z .period {
-    font-size: 0.8rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-sdZgZYEM6z .number {
-    font-size: 25px;
-  }
-  .cid-sdZgZYEM6z .period {
-    font-size: 0.7rem;
-  }
-}
-.cid-sdZgZYEM6z H2 {
-  color: #ff3366;
-}
 .cid-scaSbYkVAX {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -14994,6 +14900,9 @@ section.lazy-placeholder:after {
 }
 .cid-sgxaJgxxEx H4 {
   color: #f9f9f9;
+}
+#custom-html-d3 {
+  background-color: #000000;
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
