--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16950,7 +16950,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-szokMFN9Wf {
-  background: #000000;
+  background: #cc2952;
   padding-top: 60px;
   padding-bottom: 60px;
 }
