--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16965,7 +16965,7 @@ section.lazy-placeholder:after {
 .cid-szol0mRnSi {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #cc2952;
+  background-color: #000000;
 }
 .cid-szol0mRnSi P {
   color: #767676;
