--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1043,18 +1043,6 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 H1 {
   color: #ff3366;
 }
-#custom-html-eu {
-  /* Type valid CSS here */
-}
-#custom-html-eu div {
-  padding: 0px 0;
-  color: #ffffff;
-  text-align: center;
-}
-#custom-html-eu p {
-  font-size: 60px;
-  color: #000000;
-}
 .cid-svjZWcXcYF {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -13700,146 +13688,259 @@ section.lazy-placeholder:after {
 #custom-html-ce {
   /* Type valid CSS here */
 }
-.cid-s1ZSJMfeeQ {
-  background-image: url("../../../assets/images/whatsapp-image-2020-06-11-at-16.49.22.jpeg");
+.cid-sSTpI4Z8GB {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
 }
-.cid-s1ZSJMfeeQ .slider-text-two {
-  background: rgba(19, 19, 19, 0.8) none repeat scroll 0 0;
-  outline: 1px solid rgba(255, 255, 255, 0.2);
-  outline-offset: -15px;
-  padding: 65px 50px;
+.cid-sSTpI4Z8GB .item {
+  padding-bottom: 2rem;
 }
-.cid-s1ZSJMfeeQ .mbr-section-title {
-  color: #ff3366;
-}
-.cid-s1ZSJMfeeQ .mbr-text {
-  color: #cccccc;
-  letter-spacing: 5px;
-  font-weight: 100;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-s1ZSJMfeeQ .slider-text-two {
-    outline: 15px solid rgba(19, 19, 19, 0.8);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-  }
-}
-.cid-s1ZQoMohwI {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #000000;
-}
-.cid-s1ZQoMohwI h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-s1ZQoMohwI p {
-  color: #767676;
-  text-align: left;
-}
-.cid-s1ZQoMohwI .card-box {
-  padding-top: 2rem;
-}
-.cid-s1ZQoMohwI .card-wrapper {
+.cid-sSTpI4Z8GB .item-wrapper {
   height: 100%;
 }
-@media (max-width: 800px) {
-  .cid-s1ZQoMohwI .container {
-    padding: 0 2px;
-  }
-  .cid-s1ZQoMohwI .col-4 {
-    padding-left: 2px;
-    padding-right: 2px;
-  }
+.cid-sSTpI4Z8GB .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
 }
-.cid-s1ZQoMohwI .card-title {
+.cid-sSTpI4Z8GB .carousel-control,
+.cid-sSTpI4Z8GB .close {
+  background: #1b1b1b;
+}
+.cid-sSTpI4Z8GB .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-sSTpI4Z8GB .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-sSTpI4Z8GB .close {
+  position: fixed;
+  opacity: .5;
+  font-size: 35px;
+  font-weight: 300;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  line-height: 70px;
+  border: none;
   text-align: center;
-  color: #f9f9f9;
+  text-shadow: none;
+  z-index: 5;
+  -webkit-transition: opacity .3s ease;
+  -moz-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  font-family: 'MobiriseIcons';
 }
-.cid-s1IY8XwO6D {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #000000;
+.cid-sSTpI4Z8GB .close::before {
+  content: '\e91a';
 }
-@media (max-width: 767px) {
-  .cid-s1IY8XwO6D .content {
-    text-align: center;
-  }
-  .cid-s1IY8XwO6D .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-.cid-s1IY8XwO6D .img-logo img {
-  height: 6rem;
-}
-.cid-s1IY8XwO6D textarea.form-control {
-  resize: none;
-}
-.cid-s1IY8XwO6D .input-group-btn {
-  display: inline-block;
-}
-.cid-s1IY8XwO6D .input-group-btn .btn {
-  margin: 0 !important;
-  padding: .75rem 1.5625rem !important;
-  text-transform: none;
-}
-.cid-s1IY8XwO6D .form-group {
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-s1IY8XwO6D .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.cid-s1IY8XwO6D .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
+.cid-sSTpI4Z8GB .close:hover {
+  opacity: 1;
+  background: #000;
   color: #fff;
 }
-.cid-s1IY8XwO6D .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-s1IY8XwO6D .social-list a {
-  margin: 0;
+.cid-sSTpI4Z8GB .carousel-control {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  top: 50%;
+  margin-top: -35px;
+  line-height: 70px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 0;
   opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
+  text-shadow: none;
+  z-index: 5;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
 }
-.cid-s1IY8XwO6D .social-list a:hover {
+.cid-sSTpI4Z8GB .carousel-inner > .active {
+  display: block;
+}
+.cid-sSTpI4Z8GB .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sSTpI4Z8GB .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sSTpI4Z8GB .carousel-control .icon-next,
+.cid-sSTpI4Z8GB .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-sSTpI4Z8GB .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
   opacity: 1;
 }
-@media (max-width: 767px) {
-  .cid-s1IY8XwO6D .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
+@media (max-width: 768px) {
+  .cid-sSTpI4Z8GB .carousel-control,
+  .cid-sSTpI4Z8GB .carousel-indicators,
+  .cid-sSTpI4Z8GB .modal .close {
+    position: fixed;
   }
 }
 @media (max-width: 767px) {
-  .cid-s1IY8XwO6D .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
+  .cid-sSTpI4Z8GB .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-sSTpI4Z8GB .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
   }
 }
-.cid-s1IY8XwO6D .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
+.cid-sSTpI4Z8GB .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 3px;
 }
-.cid-s1IY8XwO6D .form-control,
-.cid-s1IY8XwO6D .input-group-btn .btn {
-  border-radius: 3px;
+@media (max-width: 991px) {
+  .cid-sSTpI4Z8GB .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
 }
-.cid-s1IY8XwO6D .foot-title,
-.cid-s1IY8XwO6D .img-logo {
-  color: #ff3366;
+@media (max-width: 767px) {
+  .cid-sSTpI4Z8GB .carousel-indicators {
+    display: none;
+  }
 }
-.cid-s1IY8XwO6D P {
-  text-align: center;
+.cid-sSTpI4Z8GB .carousel-indicators .active,
+.cid-sSTpI4Z8GB .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #1b1b1b;
+  opacity: .5;
+  border: 4px solid #1b1b1b;
+}
+.cid-sSTpI4Z8GB .carousel-indicators .active {
+  background: #fff;
+}
+.cid-sSTpI4Z8GB .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-sSTpI4Z8GB .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-sSTpI4Z8GB .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-sSTpI4Z8GB .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-sSTpI4Z8GB .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-sSTpI4Z8GB .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(98.25vh);
+  height: fit-content;
+}
+.cid-sSTpI4Z8GB .carousel {
+  width: 100%;
+}
+.cid-sSTpI4Z8GB .modal-backdrop.in {
+  opacity: .8;
+}
+.cid-sSTpI4Z8GB .modal.fade .modal-dialog {
+  -webkit-transition: margin-top 0.3s ease-out;
+  -moz-transition: margin-top 0.3s ease-out;
+  -o-transition: margin-top 0.3s ease-out;
+  transition: margin-top 0.3s ease-out;
+}
+.cid-sSTpI4Z8GB .modal.fade .modal-dialog,
+.cid-sSTpI4Z8GB .modal.in .modal-dialog {
+  -webkit-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
+}
+.cid-sSTqjUTeta {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+  overflow: hidden;
+}
+.cid-sSTqjUTeta .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-sSTqjUTeta .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sSTqjUTeta .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sSTqjUTeta .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sSTqjUTeta .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-sSTqjUTeta .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-sSTqjUTeta .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-sSTqjUTeta .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-sSTqjUTeta .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
