create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -19739,3 +19739,55 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
+.cid-tbXPqkHBxb {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/lady-2.jpg");
+}
+.cid-tbXPqkHBxb .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-tbXPqkHBxb .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tbXPqkHBxb .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tbXPqkHBxb .mbr-text {
+    text-align: center;
+  }
+}
+.cid-tbXV2HEu4Q {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/dsc01188.jpg");
+}
+.cid-tbXV2HEu4Q .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-tbXV2HEu4Q .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tbXV2HEu4Q .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tbXV2HEu4Q .mbr-text {
+    text-align: center;
+  }
+}
